# Thingy91_learning

./: .gitignore  .gitignore.txt
.west/: config
app_nrf52840/: prj_nrf52840.conf
app_nrf52840/boards/: thingy91_nrf52840.overlay
app_nrf52840/src/: main.c
app_nrf9160/: CMakeLists.txt  prj.conf
app_nrf9160/boards/: thingy91_nrf9160_ns.overlay
app_nrf9160/components/accelerometer/: accelerometer.c  accelerometer.h
app_nrf9160/components/accelerometer_low/: accelerometer_low.c  accelerometer_low.h
app_nrf9160/components/machine_learning/: machine_learning.c  machine_learning.h
app_nrf9160/src/: main.c
